# local_rag_assistant

./: .env.example  .gitignore  Makefile  README.md  SETUP_GUIDE.md  multi_kb_config.json  pyproject.toml  requirements.txt  simple_test.py  start_rag_agent.sh  streaming_api.py  test_connection.py  test_demo.py  test_embeddings.py
docs/: HALLUCINATION_PREVENTION.md  MULTI_KNOWLEDGE_BASE_SETUP.md  USAGE_INSTRUCTIONS.md  project_structure.md  prompt_management.md  tech_comparison.md
examples/: configure_multi_knowledge_bases.py  flexible_multi_kb_setup.py  hallucination_prevention_demo.py  multi_knowledge_base_demo.py  quick_multi_kb_setup.py  use_multi_knowledge_bases.py
rag_agent/: __init__.py  config.py  hallucination_detector.py  knowledge_base_manager.py  main.py  obsidian_connector.py  prompt_engineer.py  retriever.py  streaming_handler.py  vector_store.py
rag_agent/intent/: intent_recognizer.py  prompt_templates.py
rag_agent/prompts/: __init__.py  hallucination_detection_templates.py  hallucination_prevention_templates.py  hallucination_templates.py  prompt_templates.py
roadmap/: feature_iterations.md  roadmap_overview.md  todo_features.md
scripts/: start_rag_agent.sh
test_vector_store/: chroma.sqlite3
tests/: test_hallucination_detection.py  test_multi_knowledge_base.py  test_streaming.py
vector_store/: chroma.sqlite3
