[project]
name = "local-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.2",
    "chromadb==0.4.22",
    "fastapi==0.104.1",
    "markdown==3.5.1",
    "ollama==0.1.7",
    "openai==1.12.0",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "sentence-transformers==2.3.0",
    "tiktoken==0.5.2",
    "uvicorn==0.24.0",
]
