[project]
name = "local-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.2",
    "chromadb==0.4.22",
    "fastapi==0.104.1",
    "markdown==3.5.1",
    "ollama==0.1.7",
    "openai==1.12.0",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "sentence-transformers==2.3.0",
    "tiktoken==0.5.2",
    "uvicorn==0.24.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "ruff==0.9.10",
]

[tool.ruff]
# 允许的行长度
line-length = 88

[tool.ruff.lint]
# 选择要启用的检查
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
# 忽略的检查
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # module level import not at top of file (有些情况是必需的，如sys.path修改)
]

[tool.ruff.format]
# 与 Black 兼容的格式化设置
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false